--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>凪おじさん</title>
 </head>
 <body>
-    <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">人間って、面白い。</p>&mdash; Rei?@凪おじさん【殺し屋のフォロワー日本一の男】 (@r_ei_7) <a href="https://twitter.com/r_ei_7/status/1286740530643103746?ref_src=twsrc%5Etfw">July 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">クソザコ底スペMacBookの発熱がやばい<br>COBOLは神</p>&mdash; akira (@akira_ikenokami) <a href="https://twitter.com/akira_ikenokami/status/1283800401427329026?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div>
+        <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">人間って、面白い。</p>&mdash; Rei?@凪おじさん【殺し屋のフォロワー日本一の男】 (@r_ei_7) <a href="https://twitter.com/r_ei_7/status/1286740530643103746?ref_src=twsrc%5Etfw">July 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div>
+        <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">クソザコ底スペMacBookの発熱がやばい<br>COBOLは神</p>&mdash; akira (@akira_ikenokami) <a href="https://twitter.com/akira_ikenokami/status/1283800401427329026?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
 </body>
 </html>
